--- a/src/views/HomePage/index.css
+++ b/src/views/HomePage/index.css
@@ -13,6 +13,7 @@
     url("../../assets/img/herobg.jpg"); */
   padding-top: 150px;
   padding-bottom: 80px;
+  position: relative;
 }
 .date-selector-new {
   font-style: normal;
@@ -107,6 +108,25 @@
 }
 
 .card-container-img img:hover {
+  transform: scale(1.1);
+  transition: all 1s ease;
+}
+
+.chatwithus {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  background: #25D366;
+  padding: 10px 15px;
+  border-radius: 20px;
+  height: 50px;
+  border: 2px solid #ffffff;
+  cursor: pointer;
+  z-index: 10000;
+  transition: all 1s ease;
+}
+
+.chatwithus:hover {
   transform: scale(1.1);
 }
 
@@ -227,6 +247,7 @@
   align-items: center;
   width: 100%;
   height: 485px;
+  /* min-height: 485px; */
   overflow: hidden;
 }
 
